# Secure-Home-System

./: CMakeLists.txt  LICENSE  README.md  STM32F103XB_FLASH.ld  index  startup_stm32f103xb.s
components/ascon-suite/: CMakeLists.txt  config.h  version.h
components/ascon-suite/src/: CMakeLists.txt
components/ascon-suite/src/core/: ascon-version.c
components/ascon-suite/src/isap/: ascon-isap-128.c
components/cmsis-device-f1/Include/: stm32f103xb.h
components/drivers/: CMakeLists.txt
components/drivers/inc/: common.hpp  config.hpp  gpio.hpp  hd44780.hpp  i2c.hpp  keypad.hpp  sim800l.hpp  switch.hpp  uart.hpp  utils.hpp
components/drivers/src/: gpio.cpp  hd44780.cpp  i2c.cpp  secure_system.cpp  sim800l.cpp  syscalls.cpp
components/etl/: array.h
components/f103-hal/: CMakeLists.txt
components/f103-hal/Inc/: stm32f1xx_hal.h  stm32f1xx_hal_conf.h  stm32f1xx_hal_uart.h
components/freertos/: CMakeLists.txt
components/freertos/include/: FreeRTOSConfig.h
components/freertos/portable/GCC/ARM_CM3/: portmacro.h
components/littlefs/: CMakeLists.txt
components/printf/: CMakeLists.txt
main/: main.cpp
